--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,23 @@
   text-align: center;
   margin-top: 1%
 }
+
+.main ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width:100%;
+  text-align: center;
+}
+.main li{
+  display: inline-block;
+  margin: 20px;
+}
+.main a{
+  text-decoration: none;
+  color: black;
+}
+
+.main a:hover, .main a:active{
+  color:orchid;
+}
