--- a/src/login/login.css
+++ b/src/login/login.css
@@ -1,10 +1,78 @@
-.parent-div{
+.parent-login-div{
     display:flex;
     flex-direction: column;
+    border:2px solid black;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
 }
-.parent-div label{
-    margin-right:10px;
+
+.parent-login-div h1{
+    margin-bottom: 0px;
+    font-weight: 400;
+    color:#11182B;
 }
-.parent-div button{
-    width: 5%;
+
+.parent-login-div hr{
+    width: 100%;
+    border-color: #cccccc14;
+    margin-top: 0px;
+    margin-bottom: 4%;
+}
+
+.parent-login-div .input-div{
+    width: 80%;
+    margin-left: 10%;
+    display: flex;
+    flex-direction: column;
+}
+.input-div div{
+    margin-bottom: 2%;
+}
+.input-div input{
+    min-width: 100%;
+    border-color: #cccccc14;
+}
+
+ label{
+    max-width: 30%;
+    text-align: left;
+    font-weight: 500;
+}
+
+.input-div-checkbox{
+    display: flex;
+    flex-direction: row;
+}
+
+.input-div-checkbox input{
+    min-width: 1%;
+}
+
+.input-div-checkbox label, .input-div-checkbox input{
+    cursor: pointer;
+}
+
+.signin-btn{
+    max-width: 20%;
+    background-color: #A62436;
+    color: white;
+    border: none;
+    padding: 3px;
+    margin-left: 3%
+}
+.link-div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.link-div a{
+    color: #92B9D5;
+}
+
+.link-div span{
+    margin-left: 1%;
+    margin-right: 1%;
+    color: #92B9D5;
 }
